# CGR-Engine

./: .clang-format  .gitignore  CMakeLists.txt  README.md  vcpkg.json
Minimal-CGR-Engine/: Minimal-CGR-Engine.sln
Minimal-CGR-Engine/Minimal-CGR-Engine/: EBO.cpp  EBO.h  Minimal-CGR-Engine.vcxproj  Minimal-CGR-Engine.vcxproj.filters  Texture.cpp  Texture.h  VAO.cpp  VAO.h  VBO.cpp  main.cpp  shaderClass.cpp  shaderClass.h  vcpkg.json
assets/shaders/: debug_view.frag  default.frag  default.vert  deferred_resolve.frag  deferred_uber.frag  deferred_volume.frag  deferred_volume.vert  forward_gooch.frag  forward_instanced.vert  forward_outline.frag  forward_outline.vert  forward_toon.frag  g-buffer.frag  g-buffer.vert  g-buffer_instanced.frag  geometry_pass.frag  geometry_pass.vert  geometry_pass_instanced.frag  lighting_pass.frag  npr_resolve.frag  postprocess.frag
assets/shaders/deferred/geometry/: g-buffer.frag  g-buffer_instanced.vert
assets/shaders/deferred/uber/: deferred_uber.frag
assets/shaders/deferred/volumes/: deferred_resolve.frag
assets/shaders/forward/: forward.vert  forward_blinn.frag  forward_unlit.frag
include/: BenchmarkOrchestrator.h  CameraController.h  Config.h  EBO.h  EngineState.h  InputController.h  InputHandler.h  Profilers.h  RenderContext.h  SceneManager.h  Shader.h  Telemetry.h  TelemetryDashboard.h  Texture.h  VAO.h  VBO.h
old/: EBO.h  VAO.h  VBO.cpp  VBO.h  old_Concepts.cpp  old_Texture.cpp  old_Texture.h  old_main.cpp
shaders/: default.vert
src/: BenchmarkOrchestrator.cpp  CameraController.cpp  EBO.cpp  InputController.cpp  Profilers.cpp  RenderContext.cpp  SceneManager.cpp  Shader.cpp  Telemetry.cpp  TelemetryDashboard.cpp  Texture.cpp  VAO.cpp  VBO.cpp  main.cpp  shaderClass.cpp
thesis/: main.tex
thesis/Kapitel/: 03_Stand_der_Technik.tex
thesis/Verzeichnisse/: literatur.bib
